# kudos

./: .gitignore  README.md  kudos.json  pyproject.toml  users.json
kudos-ui/: package-lock.json  package.json
kudos-ui/cypress/e2e/: kudos_app.cy.js
kudos-ui/cypress/support/: commands.js  e2e.js
kudos-ui/src/: App.css  App.js
kudos-ui/src/components/: Login.css  Login.js  Modal.css  Modal.js  ReceivedKudos.css  ReceivedKudos.js  SendKudos.css  SendKudos.js  UserList.js  login.css  login.js
service/: app.py  models.py  reset_kudos.py  routes.py
tests/: conftest.py  test_routes.py
