[tool.poetry]
name = "kudos"
version = "0.1.0"
description = "Kudos"
packages = [{ include = "service" }]


[tool.poetry.dependencies]
python = "^3.12,<3.13"
flask = "2.3.3"
flask-restx = "1.3.0"
flask-cors = "4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mock = "^5.1.0"
mongomock = "^4.1.2"
pytest = "^8.2.1"
pytest-cov ="^5.0.0"
pytest-flask = "1.2.0"
pytest-freezegun = "0.4.1"

[tool.pytest.ini_options]
addopts = "--cov -v --cov-report html --cov-report xml:coverage.xml --junitxml=report.xml"
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["service"]
